--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "expo": "~51.0.27",
     "expo-constants": "~16.0.2",
@@ -23,6 +27,10 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "^0.74.5",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-modals": "^0.22.3",
+    "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.2.0",
